[package]
name = "bits_of_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
futures = "0.3"
rand = "0.8.5"

[[bin]]
name = "cli_args"
path = "src/cli_args.rs"

[[bin]]
name = "async_simple"
path = "src/async_simple.rs"

[[bin]]
name = "tcpprint"
path = "src/tcpprint.rs"
